--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
         run: |
           zsh --version
           bash --version
-          time ./test_all
+          time make test
 
   test-linux:
     name: Linux Test
@@ -82,4 +82,4 @@ jobs:
         run: |
           zsh --version
           bash --version
-          time ./test_all
+          time make test
