Start working on it supporting unalias in the env files

--- a/tests/playground/project_1/.envrc
+++ b/tests/playground/project_1/.envrc
@@ -15,3 +15,9 @@ alias custom_alias_1='echo "CUSTOM LOCAL ALIAS PROJECT 1"'
 custom_function_1() {
   echo "CUSTOM LOCAL FUNCTION PROJECT 1"
 }
+
+unalias alis_with_a_function_name
+
+alis_with_a_function_name() {
+  echo 2
+}
