Fix existing alias shadowing new function
Stash and remove the shadowing alias when a conflict is detected.

--- a/tests/playground/project_1/.envrc
+++ b/tests/playground/project_1/.envrc
@@ -15,3 +15,10 @@ alias custom_alias_1='echo "CUSTOM LOCAL ALIAS PROJECT 1"'
 custom_function_1() {
   echo "CUSTOM LOCAL FUNCTION PROJECT 1"
 }
+
+# Shadowing
+existing_alias_shadowing_new_function()  {
+  echo "OVERWRITTEN ALIAS"
+}
+
+alias existing_function_shadowing_new_alias='echo "OVERWRITTEN FUNCTION"'
