--- a/tests/playground/performance/.envrc
+++ b/tests/playground/performance/.envrc
@@ -101,405 +101,405 @@ export var_99="local var 99"
 export var_100="local var 100"
 
 # ================================== Aliases ===================================
-alias alias_1='echo "local alias 1"'
-alias alias_2='echo "local alias 2"'
-alias alias_3='echo "local alias 3"'
-alias alias_4='echo "local alias 4"'
-alias alias_5='echo "local alias 5"'
-alias alias_6='echo "local alias 6"'
-alias alias_7='echo "local alias 7"'
-alias alias_8='echo "local alias 8"'
-alias alias_9='echo "local alias 9"'
-alias alias_10='echo "local alias 10"'
-alias alias_11='echo "local alias 11"'
-alias alias_12='echo "local alias 12"'
-alias alias_13='echo "local alias 13"'
-alias alias_14='echo "local alias 14"'
-alias alias_15='echo "local alias 15"'
-alias alias_16='echo "local alias 16"'
-alias alias_17='echo "local alias 17"'
-alias alias_18='echo "local alias 18"'
-alias alias_19='echo "local alias 19"'
-alias alias_20='echo "local alias 20"'
-alias alias_21='echo "local alias 21"'
-alias alias_22='echo "local alias 22"'
-alias alias_23='echo "local alias 23"'
-alias alias_24='echo "local alias 24"'
-alias alias_25='echo "local alias 25"'
-alias alias_26='echo "local alias 26"'
-alias alias_27='echo "local alias 27"'
-alias alias_28='echo "local alias 28"'
-alias alias_29='echo "local alias 29"'
-alias alias_30='echo "local alias 30"'
-alias alias_31='echo "local alias 31"'
-alias alias_32='echo "local alias 32"'
-alias alias_33='echo "local alias 33"'
-alias alias_34='echo "local alias 34"'
-alias alias_35='echo "local alias 35"'
-alias alias_36='echo "local alias 36"'
-alias alias_37='echo "local alias 37"'
-alias alias_38='echo "local alias 38"'
-alias alias_39='echo "local alias 39"'
-alias alias_40='echo "local alias 40"'
-alias alias_41='echo "local alias 41"'
-alias alias_42='echo "local alias 42"'
-alias alias_43='echo "local alias 43"'
-alias alias_44='echo "local alias 44"'
-alias alias_45='echo "local alias 45"'
-alias alias_46='echo "local alias 46"'
-alias alias_47='echo "local alias 47"'
-alias alias_48='echo "local alias 48"'
-alias alias_49='echo "local alias 49"'
-alias alias_50='echo "local alias 50"'
-alias alias_51='echo "local alias 51"'
-alias alias_52='echo "local alias 52"'
-alias alias_53='echo "local alias 53"'
-alias alias_54='echo "local alias 54"'
-alias alias_55='echo "local alias 55"'
-alias alias_56='echo "local alias 56"'
-alias alias_57='echo "local alias 57"'
-alias alias_58='echo "local alias 58"'
-alias alias_59='echo "local alias 59"'
-alias alias_60='echo "local alias 60"'
-alias alias_61='echo "local alias 61"'
-alias alias_62='echo "local alias 62"'
-alias alias_63='echo "local alias 63"'
-alias alias_64='echo "local alias 64"'
-alias alias_65='echo "local alias 65"'
-alias alias_66='echo "local alias 66"'
-alias alias_67='echo "local alias 67"'
-alias alias_68='echo "local alias 68"'
-alias alias_69='echo "local alias 69"'
-alias alias_70='echo "local alias 70"'
-alias alias_71='echo "local alias 71"'
-alias alias_72='echo "local alias 72"'
-alias alias_73='echo "local alias 73"'
-alias alias_74='echo "local alias 74"'
-alias alias_75='echo "local alias 75"'
-alias alias_76='echo "local alias 76"'
-alias alias_77='echo "local alias 77"'
-alias alias_78='echo "local alias 78"'
-alias alias_79='echo "local alias 79"'
-alias alias_80='echo "local alias 80"'
-alias alias_81='echo "local alias 81"'
-alias alias_82='echo "local alias 82"'
-alias alias_83='echo "local alias 83"'
-alias alias_84='echo "local alias 84"'
-alias alias_85='echo "local alias 85"'
-alias alias_86='echo "local alias 86"'
-alias alias_87='echo "local alias 87"'
-alias alias_88='echo "local alias 88"'
-alias alias_89='echo "local alias 89"'
-alias alias_90='echo "local alias 90"'
-alias alias_91='echo "local alias 91"'
-alias alias_92='echo "local alias 92"'
-alias alias_93='echo "local alias 93"'
-alias alias_94='echo "local alias 94"'
-alias alias_95='echo "local alias 95"'
-alias alias_96='echo "local alias 96"'
-alias alias_97='echo "local alias 97"'
-alias alias_98='echo "local alias 98"'
-alias alias_99='echo "local alias 99"'
-alias alias_100='echo "local alias 100"'
+alias alias_1="echo local_alias_1"
+alias alias_2="echo local_alias_2"
+alias alias_3="echo local_alias_3"
+alias alias_4="echo local_alias_4"
+alias alias_5="echo local_alias_5"
+alias alias_6="echo local_alias_6"
+alias alias_7="echo local_alias_7"
+alias alias_8="echo local_alias_8"
+alias alias_9="echo local_alias_9"
+alias alias_10="echo local_alias_10"
+alias alias_11="echo local_alias_11"
+alias alias_12="echo local_alias_12"
+alias alias_13="echo local_alias_13"
+alias alias_14="echo local_alias_14"
+alias alias_15="echo local_alias_15"
+alias alias_16="echo local_alias_16"
+alias alias_17="echo local_alias_17"
+alias alias_18="echo local_alias_18"
+alias alias_19="echo local_alias_19"
+alias alias_20="echo local_alias_20"
+alias alias_21="echo local_alias_21"
+alias alias_22="echo local_alias_22"
+alias alias_23="echo local_alias_23"
+alias alias_24="echo local_alias_24"
+alias alias_25="echo local_alias_25"
+alias alias_26="echo local_alias_26"
+alias alias_27="echo local_alias_27"
+alias alias_28="echo local_alias_28"
+alias alias_29="echo local_alias_29"
+alias alias_30="echo local_alias_30"
+alias alias_31="echo local_alias_31"
+alias alias_32="echo local_alias_32"
+alias alias_33="echo local_alias_33"
+alias alias_34="echo local_alias_34"
+alias alias_35="echo local_alias_35"
+alias alias_36="echo local_alias_36"
+alias alias_37="echo local_alias_37"
+alias alias_38="echo local_alias_38"
+alias alias_39="echo local_alias_39"
+alias alias_40="echo local_alias_40"
+alias alias_41="echo local_alias_41"
+alias alias_42="echo local_alias_42"
+alias alias_43="echo local_alias_43"
+alias alias_44="echo local_alias_44"
+alias alias_45="echo local_alias_45"
+alias alias_46="echo local_alias_46"
+alias alias_47="echo local_alias_47"
+alias alias_48="echo local_alias_48"
+alias alias_49="echo local_alias_49"
+alias alias_50="echo local_alias_50"
+alias alias_51="echo local_alias_51"
+alias alias_52="echo local_alias_52"
+alias alias_53="echo local_alias_53"
+alias alias_54="echo local_alias_54"
+alias alias_55="echo local_alias_55"
+alias alias_56="echo local_alias_56"
+alias alias_57="echo local_alias_57"
+alias alias_58="echo local_alias_58"
+alias alias_59="echo local_alias_59"
+alias alias_60="echo local_alias_60"
+alias alias_61="echo local_alias_61"
+alias alias_62="echo local_alias_62"
+alias alias_63="echo local_alias_63"
+alias alias_64="echo local_alias_64"
+alias alias_65="echo local_alias_65"
+alias alias_66="echo local_alias_66"
+alias alias_67="echo local_alias_67"
+alias alias_68="echo local_alias_68"
+alias alias_69="echo local_alias_69"
+alias alias_70="echo local_alias_70"
+alias alias_71="echo local_alias_71"
+alias alias_72="echo local_alias_72"
+alias alias_73="echo local_alias_73"
+alias alias_74="echo local_alias_74"
+alias alias_75="echo local_alias_75"
+alias alias_76="echo local_alias_76"
+alias alias_77="echo local_alias_77"
+alias alias_78="echo local_alias_78"
+alias alias_79="echo local_alias_79"
+alias alias_80="echo local_alias_80"
+alias alias_81="echo local_alias_81"
+alias alias_82="echo local_alias_82"
+alias alias_83="echo local_alias_83"
+alias alias_84="echo local_alias_84"
+alias alias_85="echo local_alias_85"
+alias alias_86="echo local_alias_86"
+alias alias_87="echo local_alias_87"
+alias alias_88="echo local_alias_88"
+alias alias_89="echo local_alias_89"
+alias alias_90="echo local_alias_90"
+alias alias_91="echo local_alias_91"
+alias alias_92="echo local_alias_92"
+alias alias_93="echo local_alias_93"
+alias alias_94="echo local_alias_94"
+alias alias_95="echo local_alias_95"
+alias alias_96="echo local_alias_96"
+alias alias_97="echo local_alias_97"
+alias alias_98="echo local_alias_98"
+alias alias_99="echo local_alias_99"
+alias alias_100="echo local_alias_100"
 
 # ================================== Functions =================================
 function_1() {
-  echo "local function 1"
+  echo local_function_1
 }
 function_2() {
-  echo "local function 2"
+  echo local_function_2
 }
 function_3() {
-  echo "local function 3"
+  echo local_function_3
 }
 function_4() {
-  echo "local function 4"
+  echo local_function_4
 }
 function_5() {
-  echo "local function 5"
+  echo local_function_5
 }
 function_6() {
-  echo "local function 6"
+  echo local_function_6
 }
 function_7() {
-  echo "local function 7"
+  echo local_function_7
 }
 function_8() {
-  echo "local function 8"
+  echo local_function_8
 }
 function_9() {
-  echo "local function 9"
+  echo local_function_9
 }
 function_10() {
-  echo "local function 10"
+  echo local_function_10
 }
 function_11() {
-  echo "local function 11"
+  echo local_function_11
 }
 function_12() {
-  echo "local function 12"
+  echo local_function_12
 }
 function_13() {
-  echo "local function 13"
+  echo local_function_13
 }
 function_14() {
-  echo "local function 14"
+  echo local_function_14
 }
 function_15() {
-  echo "local function 15"
+  echo local_function_15
 }
 function_16() {
-  echo "local function 16"
+  echo local_function_16
 }
 function_17() {
-  echo "local function 17"
+  echo local_function_17
 }
 function_18() {
-  echo "local function 18"
+  echo local_function_18
 }
 function_19() {
-  echo "local function 19"
+  echo local_function_19
 }
 function_20() {
-  echo "local function 20"
+  echo local_function_20
 }
 function_21() {
-  echo "local function 21"
+  echo local_function_21
 }
 function_22() {
-  echo "local function 22"
+  echo local_function_22
 }
 function_23() {
-  echo "local function 23"
+  echo local_function_23
 }
 function_24() {
-  echo "local function 24"
+  echo local_function_24
 }
 function_25() {
-  echo "local function 25"
+  echo local_function_25
 }
 function_26() {
-  echo "local function 26"
+  echo local_function_26
 }
 function_27() {
-  echo "local function 27"
+  echo local_function_27
 }
 function_28() {
-  echo "local function 28"
+  echo local_function_28
 }
 function_29() {
-  echo "local function 29"
+  echo local_function_29
 }
 function_30() {
-  echo "local function 30"
+  echo local_function_30
 }
 function_31() {
-  echo "local function 31"
+  echo local_function_31
 }
 function_32() {
-  echo "local function 32"
+  echo local_function_32
 }
 function_33() {
-  echo "local function 33"
+  echo local_function_33
 }
 function_34() {
-  echo "local function 34"
+  echo local_function_34
 }
 function_35() {
-  echo "local function 35"
+  echo local_function_35
 }
 function_36() {
-  echo "local function 36"
+  echo local_function_36
 }
 function_37() {
-  echo "local function 37"
+  echo local_function_37
 }
 function_38() {
-  echo "local function 38"
+  echo local_function_38
 }
 function_39() {
-  echo "local function 39"
+  echo local_function_39
 }
 function_40() {
-  echo "local function 40"
+  echo local_function_40
 }
 function_41() {
-  echo "local function 41"
+  echo local_function_41
 }
 function_42() {
-  echo "local function 42"
+  echo local_function_42
 }
 function_43() {
-  echo "local function 43"
+  echo local_function_43
 }
 function_44() {
-  echo "local function 44"
+  echo local_function_44
 }
 function_45() {
-  echo "local function 45"
+  echo local_function_45
 }
 function_46() {
-  echo "local function 46"
+  echo local_function_46
 }
 function_47() {
-  echo "local function 47"
+  echo local_function_47
 }
 function_48() {
-  echo "local function 48"
+  echo local_function_48
 }
 function_49() {
-  echo "local function 49"
+  echo local_function_49
 }
 function_50() {
-  echo "local function 50"
+  echo local_function_50
 }
 function_51() {
-  echo "local function 51"
+  echo local_function_51
 }
 function_52() {
-  echo "local function 52"
+  echo local_function_52
 }
 function_53() {
-  echo "local function 53"
+  echo local_function_53
 }
 function_54() {
-  echo "local function 54"
+  echo local_function_54
 }
 function_55() {
-  echo "local function 55"
+  echo local_function_55
 }
 function_56() {
-  echo "local function 56"
+  echo local_function_56
 }
 function_57() {
-  echo "local function 57"
+  echo local_function_57
 }
 function_58() {
-  echo "local function 58"
+  echo local_function_58
 }
 function_59() {
-  echo "local function 59"
+  echo local_function_59
 }
 function_60() {
-  echo "local function 60"
+  echo local_function_60
 }
 function_61() {
-  echo "local function 61"
+  echo local_function_61
 }
 function_62() {
-  echo "local function 62"
+  echo local_function_62
 }
 function_63() {
-  echo "local function 63"
+  echo local_function_63
 }
 function_64() {
-  echo "local function 64"
+  echo local_function_64
 }
 function_65() {
-  echo "local function 65"
+  echo local_function_65
 }
 function_66() {
-  echo "local function 66"
+  echo local_function_66
 }
 function_67() {
-  echo "local function 67"
+  echo local_function_67
 }
 function_68() {
-  echo "local function 68"
+  echo local_function_68
 }
 function_69() {
-  echo "local function 69"
+  echo local_function_69
 }
 function_70() {
-  echo "local function 70"
+  echo local_function_70
 }
 function_71() {
-  echo "local function 71"
+  echo local_function_71
 }
 function_72() {
-  echo "local function 72"
+  echo local_function_72
 }
 function_73() {
-  echo "local function 73"
+  echo local_function_73
 }
 function_74() {
-  echo "local function 74"
+  echo local_function_74
 }
 function_75() {
-  echo "local function 75"
+  echo local_function_75
 }
 function_76() {
-  echo "local function 76"
+  echo local_function_76
 }
 function_77() {
-  echo "local function 77"
+  echo local_function_77
 }
 function_78() {
-  echo "local function 78"
+  echo local_function_78
 }
 function_79() {
-  echo "local function 79"
+  echo local_function_79
 }
 function_80() {
-  echo "local function 80"
+  echo local_function_80
 }
 function_81() {
-  echo "local function 81"
+  echo local_function_81
 }
 function_82() {
-  echo "local function 82"
+  echo local_function_82
 }
 function_83() {
-  echo "local function 83"
+  echo local_function_83
 }
 function_84() {
-  echo "local function 84"
+  echo local_function_84
 }
 function_85() {
-  echo "local function 85"
+  echo local_function_85
 }
 function_86() {
-  echo "local function 86"
+  echo local_function_86
 }
 function_87() {
-  echo "local function 87"
+  echo local_function_87
 }
 function_88() {
-  echo "local function 88"
+  echo local_function_88
 }
 function_89() {
-  echo "local function 89"
+  echo local_function_89
 }
 function_90() {
-  echo "local function 90"
+  echo local_function_90
 }
 function_91() {
-  echo "local function 91"
+  echo local_function_91
 }
 function_92() {
-  echo "local function 92"
+  echo local_function_92
 }
 function_93() {
-  echo "local function 93"
+  echo local_function_93
 }
 function_94() {
-  echo "local function 94"
+  echo local_function_94
 }
 function_95() {
-  echo "local function 95"
+  echo local_function_95
 }
 function_96() {
-  echo "local function 96"
+  echo local_function_96
 }
 function_97() {
-  echo "local function 97"
+  echo local_function_97
 }
 function_98() {
-  echo "local function 98"
+  echo local_function_98
 }
 function_99() {
-  echo "local function 99"
+  echo local_function_99
 }
 function_100() {
-  echo "local function 100"
+  echo local_function_100
 }
