--- a/.envrc.example
+++ b/.envrc.example
@@ -10,6 +10,6 @@ alias tu="make test_all_in_ubuntu" # Test all in Ubuntu
 alias tp="make test_performance" # Test performance
 
 alias de="docker exec -it local-sherpa-test-ubuntu-container" # Docker exec
-alias up='docker-compose -p local_sherpa up -d' # Start the test container
+alias up="docker-compose -p local_sherpa up -d" # Start the test container
 
 alias lint="make lint" # Shellcheck
