--- a/tests/playground/project_1/.envrc
+++ b/tests/playground/project_1/.envrc
@@ -1,16 +1,16 @@
 # Global overwrites
-export var_1='LOCAL VAR PROJECT 1'
+export var_1="LOCAL VAR PROJECT 1"
 
-alias alias_1='echo "LOCAL ALIAS PROJECT 1"'
+alias alias_1="echo 'LOCAL ALIAS PROJECT 1'"
 
 function_1() {
   echo "LOCAL FUNCTION PROJECT 1"
 }
 
 # Custom for project 1
-export custom_var_1='CUSTOM LOCAL VAR PROJECT 1'
+export custom_var_1="CUSTOM LOCAL VAR PROJECT 1"
 
-alias custom_alias_1='echo "CUSTOM LOCAL ALIAS PROJECT 1"'
+alias custom_alias_1="echo 'CUSTOM LOCAL ALIAS PROJECT 1'"
 
 custom_function_1() {
   echo "CUSTOM LOCAL FUNCTION PROJECT 1"
@@ -21,4 +21,4 @@ existing_alias_shadowing_new_function()  {
   echo "OVERWRITTEN ALIAS"
 }
 
-alias existing_function_shadowing_new_alias='echo "OVERWRITTEN FUNCTION"'
+alias existing_function_shadowing_new_alias="echo 'OVERWRITTEN FUNCTION'"
