--- a/tests/playground/project_1/subfolder_with_no_local_env/subproject/.envrc
+++ b/tests/playground/project_1/subfolder_with_no_local_env/subproject/.envrc
@@ -1,10 +1,10 @@
 # Project 1 overwrites
-alias alias_1='echo "LOCAL ALIAS SUBPROJECT"'
+alias alias_1="echo 'LOCAL ALIAS SUBPROJECT'"
 
 # Custom for subproject
-export subvar_1='CUSTOM LOCAL VAR SUBPROJECT'
+export subvar_1="CUSTOM LOCAL VAR SUBPROJECT"
 
-alias subalias_1='echo "CUSTOM LOCAL ALIAS SUBPROJECT"'
+alias subalias_1="echo 'CUSTOM LOCAL ALIAS SUBPROJECT'"
 
 subfunction_1() {
   echo "CUSTOM LOCAL FUNCTION SUBPROJECT"
