--- a/tests/playground/project_2/.envrc
+++ b/tests/playground/project_2/.envrc
@@ -1,6 +1,6 @@
-export var_1='LOCAL VAR PROJECT 2'
+export var_1="LOCAL VAR PROJECT 2"
 
-alias alias_1='echo "LOCAL ALIAS PROJECT 2"'
+alias alias_1="echo 'LOCAL ALIAS PROJECT 2'"
 
 function_1() {
   echo "LOCAL FUNCTION PROJECT 2"
