--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Install prerequisites
+      - name: Install the prerequisites
         run: |
           sudo apt-get update -y
           sudo apt-get install -y --no-install-recommends shellcheck
@@ -56,7 +56,7 @@ jobs:
       - name: Install prerequisites
         run: brew install coreutils bash
 
-      - name: Run tests on ${{ matrix.os }}
+      - name: Run the tests
         run: |
           zsh --version
           bash --version
@@ -73,12 +73,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install prerequisites
+      - name: Install the prerequisites
         run: |
           sudo apt-get update -y
           sudo apt-get install -y --no-install-recommends zsh
 
-      - name: Run tests on ${{ matrix.os }}
+      - name: Run the tests
         run: |
           zsh --version
           bash --version
