Refactor: better Docker container name

--- a/.envrc.example
+++ b/.envrc.example
@@ -9,7 +9,7 @@ alias taa="make test && make test_all_in_ubuntu" # Test absolutely all
 alias tu="make test_all_in_ubuntu" # Test all in Ubuntu
 alias tp="make test_performance" # Test performance
 
-alias de="docker exec -it local-sherpa-test-ubuntu-container" # Docker exec
+alias de="docker exec -it local-sherpa-ubuntu" # Docker exec
 alias up="docker-compose -p local_sherpa up -d" # Start the test container
 
 alias lint="make lint" # Shellcheck
