--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: dockerfiles/ubuntu.dockerfile
-    container_name: local-sherpa-test-ubuntu-container
+    container_name: local-sherpa-ubuntu
     volumes:
       - .:/app
     stdin_open: true
