Specify the hostname for the Docker containers
Makes it easier to identify containers when working inside their shells.

--- a/.envrc.example
+++ b/.envrc.example
@@ -1,5 +1,5 @@
 export COMPOSE_PROJECT_NAME="local-sherpa"
-export DOCKER_CONTAINER_NAME="local-sherpa-ubuntu"
+# export DOCKER_CONTAINER_NAME="local-sherpa-ubuntu"
 
 alias t="make test_zsh" # Test Zsh
 
