Keep env var in example dump

--- a/.envrc.example
+++ b/.envrc.example
@@ -1,4 +1,4 @@
-export COMPOSE_PROJECT_NAME="local-sherpa"
+export COMPOSE_PROJECT_NAME="local-sherpa" # keep
 # export DOCKER_CONTAINER_NAME="local-sherpa-ubuntu"
 
 alias t="make test_zsh" # Test Zsh
