--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,19 @@ services:
     stdin_open: true
     tty: true
 
+  homebrew_install_uninstall:
+    image: homebrew/brew
+    container_name: local-sherpa-homebrew-install-uninstall
+    volumes:
+      - .:/app
+      - ./tmp/homebrew:/homebrew
+    environment:
+      - HOMEBREW_NO_ANALYTICS=1
+      - HOMEBREW_NO_AUTO_UPDATE=1
+      - SHERPA_VERSION
+    stdin_open: true
+    tty: true
+
   min-shell-versions-ubuntu:
     hostname: min-shell-versions-ubuntu
     build:
